feat: metrics for contacts added
